--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <link rel="stylesheet" type="text/css" href="style.css">
 
-  <title>Hello, world!</title>
+  <title>Covid-19 Live Updates</title>
 </head>
 <body onload="fetch()">
 
